improved css logic

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,6 +1,11 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="fr">
+    <style>
+    html {
+font-family: Calibri, sans-serif;, sans-serif;
+}
+    </style>
     <head>
         <meta charset="UTF-8">
         <meta name="description"
