--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -4,11 +4,11 @@
 /* Carte séance */
 .maintitle {
   border: 1px solid #e961c7ff; border-radius: 8px; background-color: #ed488a6b;
-  padding: 12px 14px; margin: 10px 0;font-family: Calibri, sans-serif;
+  padding: 12px 14px; margin: 10px 0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
-.categories{border: 1px solid #131213ff; border-radius: 8px; background-color: #9790956b;
-  padding: 12px 14px; margin: 10px 0; font-family: Calibri, sans-serif;
+.categories{border: 1px solid #131213ff; border-radius: 8px; background-color: #cbc7ca47;
+  padding: 12px 14px; margin: 10px 0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);}
     </style>
     <h1 class="maintitle">Séances par catégories</h1>
