--- a/core/templates/core/unassign_confirm.html
+++ b/core/templates/core/unassign_confirm.html
@@ -1,4 +1,5 @@
 {# core/templates/core/unassign_confirm.html #}
+{% extends "core/base.html" %}
 <h1>Confirmer la désinscription</h1>
 <p>Session : {{ session.title_auto }}</p>
 <p>Coach : {{ coach }}</p>
